fix background alignment

--- a/style.css
+++ b/style.css
@@ -181,10 +181,8 @@ p {
     }
 
     #gmp1-process {
-        width: 50%;
+        width: 100%;
         background-image: url(https://i.imgur.com/XdsGzB4.jpg);
-        height: 405px;
-        background-position: center;
       }
       
     
